--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "docker:build": "docker build -t webapp:latest .",
+    "docker:run": "docker compose up"
   },
   "prettier": {
     "printWidth": 100,
