Add runtime environment configuration with Docker entrypoint script and env.js

--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    environment:
+      - API_BASE_URL=https://kuala-api-staging.seribasa.digital
     ports:
-      - "4200:80"
+      - "8080:80"
     restart: unless-stopped
